crates/oxc_react_compiler/tests/snapshots/prop-capturing-function-1.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/prop-capturing-function-1.js
---
import { c as _c } from "react/compiler-runtime";
function component(a, b) {
	const $ = _c(3);
	let t0;
	if ($[0] !== a || $[1] !== b) {
		const z = {
			a,
			b
		};
		t0 = function() {
			console.log(z);
		};
		$[0] = a;
		$[1] = b;
		$[2] = t0;
	} else {
		t0 = $[2];
	}
	const x = t0;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
