crates/oxc_react_compiler/tests/snapshots/property-assignment.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/property-assignment.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.p0) {
		const x = {};
		const y = [];
		x.y = y;
		const child = <Component data={y} />;
		x.y.push(props.p0);
		t0 = <Component data={x}>{child}</Component>;
		$[0] = props.p0;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
