crates/oxc_react_compiler/tests/snapshots/property-call-spread.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/property-call-spread.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(3);
	let t0;
	if ($[0] !== props.a || $[1] !== props.b) {
		t0 = foo.bar(...props.a, null, ...props.b);
		$[0] = props.a;
		$[1] = props.b;
		$[2] = t0;
	} else {
		t0 = $[2];
	}
	const x = t0;
	return x;
}
