crates/oxc_react_compiler/tests/snapshots/prune-scopes-whose-deps-invalidate-jsx.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/prune-scopes-whose-deps-invalidate-jsx.js
---
import { c as _c } from "react/compiler-runtime";
import { useHook } from "shared-runtime";
function Component(props) {
	const $ = _c(4);
	const o = {};
	let t0;
	if ($[0] !== props.value) {
		t0 = <div>{props.value}</div>;
		$[0] = props.value;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const x = t0;
	useHook();
	o.value = props.value;
	let t1;
	if ($[2] !== x) {
		const y = <div>{x}</div>;
		t1 = <div>{y}</div>;
		$[2] = x;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: "sathya" }]
};
