crates/oxc_react_compiler/tests/snapshots/prune-scopes-whose-deps-invalidate-new.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/prune-scopes-whose-deps-invalidate-new.js
---
import { useHook } from "shared-runtime";
function Component(props) {
	const x = new Foo();
	useHook();
	x.value = props.value;
	const y = { x };
	return { y };
}
class Foo {}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: "sathya" }]
};
