crates/oxc_react_compiler/tests/snapshots/prune-scopes-whose-deps-invalidate-object.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/prune-scopes-whose-deps-invalidate-object.js
---
import { useHook } from "shared-runtime";
function Component(props) {
	const x = {};
	useHook();
	x.value = props.value;
	const y = { x };
	return { y };
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: "sathya" }]
};
